Fix HTML encoding issues in gym.htmlima

--- a/gym.html
+++ b/gym.html
@@ -150,7 +150,7 @@
 
         <div class="trainer">
           <img
-            src="https://raw.githubusercontent.com/programmercloud/pgc-gym/main/img/trainer3.jpg"
+            src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoVvbMCSFHfwxHa3bmhSDOWwduqycGgdaRUg&s"
             alt=""
           />
           <h3 class="secondary mb">Alan Smith</h3>
@@ -196,7 +196,7 @@
         </div>
         <div class="visual">
           <img
-            src="https://raw.githubusercontent.com/programmercloud/pgc-gym/main/img/testimonial.png"
+            src="https://m.behindwoods.com/tamil-movies/slideshow/top-heroes-real-life-gymming-photos/images/jayam-ravi.jpg"
             alt=""
           />
         </div>
@@ -259,4 +259,5 @@
     <!-- JS -->
     <script src="./js/gym.js"></script>
   </body>
+
 </html>
