Fix trainer names and descriptions in gym.html
Updated trainer names and descriptions for claupdatew thrity.

--- a/gym.html
+++ b/gym.html
@@ -123,10 +123,9 @@
             src="https://raw.githubusercontent.com/programmercloud/pgc-gym/main/img/trainer1.jpg"
             alt=""
           />
-          <h3 class="secondary mb">Alan Smith</h3>
+          <h3 class="secondary mb">Thoufeek</h3>
           <p class="tertiary mb">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla.
-          </p>
+He is an good trainer          </p>
 
           <a href="#" class="btn-2">
             <ion-icon name="arrow-redo-circle-outline"></ion-icon>
@@ -138,9 +137,9 @@
             src="https://raw.githubusercontent.com/programmercloud/pgc-gym/main/img/trainer2.jpg"
             alt=""
           />
-          <h3 class="secondary mb">Alan Smith</h3>
+          <h3 class="secondary mb">Surya s</h3>
           <p class="tertiary mb">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla.
+            He is an good trainer          
           </p>
 
           <a href="#" class="btn-2">
@@ -153,10 +152,9 @@
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQoVvbMCSFHfwxHa3bmhSDOWwduqycGgdaRUg&s"
             alt=""
           />
-          <h3 class="secondary mb">Alan Smith</h3>
+          <h3 class="secondary mb">Maran </h3>
           <p class="tertiary mb">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla.
-          </p>
+He is an good trainer                    </p>
 
           <a href="#" class="btn-2">
             <ion-icon name="arrow-redo-circle-outline"></ion-icon>
@@ -261,3 +259,4 @@
   </body>
 
 </html>
+
